# chatnut

./: .coderabbit.yaml  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  RELEASING.md  SKILL.md  install.sh  pyproject.toml  working-scope.md
.cc-config/skills/deployment/: SKILL.md
.claude/: skills
.claude/skills/deploy/: SKILL.md  build-mcp-binary.sh
.claude/skills/deployment/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  e2e.yml
app/be/: pyproject.toml
app/be/agent_chat_mcp/: app.py  config.py  db.py  mcp.py  routes.py  service.py
app/be/agents_chat_mcp/: __main__.py  app.py  cli.py  config.py  db.py  mcp.py  migrate.py  models.py  routes.py  service.py
app/be/agents_chat_mcp/static/: index.html
app/be/chatnut/: __main__.py  app.py  cli.py  config.py  db.py  mcp.py  migrate.py  notify.py  routes.py  service.py  version_check.py
app/be/chatnut/migrations/: 004_agent_registry.sql  004_messages_cascade.sql
app/be/chatnut/rules/: chatnut-protocol.md
app/be/chatnut/skill/: SKILL.md
app/be/chatnut/static/: index.html
app/be/migrations/: 001_initial.sql  002_read_cursors.sql  003_room_status.sql
app/be/scripts/: import_archive.py
app/be/team_chat_mcp/: app.py  db.py  mcp.py  migrate.py  routes.py  service.py
app/be/tests/: conftest.py  test_app_config.py  test_app_startup.py  test_cli.py  test_db.py  test_import_archive.py  test_integration.py  test_mcp.py  test_mcp_e2e.py  test_migrate.py  test_models.py  test_notify.py  test_routes.py  test_service.py  test_version_check.py  test_wait_for_messages.py
app/fe/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/fe/src/: App.tsx  index.css  types.ts
app/fe/src/components/: ChatView.tsx  ConnectionStatus.tsx  MarkdownRenderer.tsx  Message.tsx  (+5 more)
data/: dev.db  dev.db-shm  dev.db-wal  seed.py
docs/: skill-migration.md
docs/cycles/2026-03-23-mcp-20-ci-security/: plan.md  summary.md
docs/cycles/2026-03-23-mcp-21-22-backend-reliability/: plan.md  summary.md
docs/cycles/2026-03-23-mcp-26-mention-notify/: plan.md  summary.md
docs/cycles/2026-04-05-mcp-23-sse-scalability/: plan.md  summary.md
docs/cycles/2026-04-05-mcp-24-frontend-sse-reliability/: plan.md  summary.md
docs/plans/: 2026-02-27-schema-enhance-design.md  2026-03-02-dev-db-ss-enhancement-design.md  2026-03-02-go-public-prep.md  2026-03-03-server-lifecycle-auto-open-design.md
docs/plans/archived/: 2026-02-27-deferred-perf-and-tests.md  2026-02-27-schema-enhance-impl.md  2026-02-27-team-chat-mcp-design.md  2026-02-27-team-chat-mcp-impl.md  2026-02-28-unread-read-system.md  2026-03-01-wait-for-messages.md  2026-03-02-code-quality.md  2026-03-02-dev-db-ss-plan.md  2026-03-02-docs-ci-full.md  2026-03-02-go-public-prep.md  2026-03-02-release-cd-pipeline.md  2026-03-03-deployment-skill.md  2026-03-03-stdio-distribution.md  2026-03-03-update-notifier.md  2026-03-04-room-discovery-team-status.md
scripts/: start_full_stack.sh
team_chat_mcp/: db.py  models.py  server.py  service.py
tests/: conftest.py  test_db.py  test_integration.py  test_models.py  test_service.py
(+17 files in other folders)
