[project]
name = "team-chat-mcp"
version = "0.1.0"
description = "MCP server for agent team chatrooms with SQLite backend"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
