[project]
name = "agents-chat-mcp"
version = "0.2.0"
description = "MCP server for agent team chatrooms with SQLite backend"
authors = [
    { name = "Runno AI", email = "hi@runno.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "anyio>=4.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Framework :: FastAPI",
]

[project.urls]
Repository = "https://github.com/runno-ai/agents-chat-mcp"
Homepage = "https://github.com/runno-ai/agents-chat-mcp"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
