[project]
name = "chatnut"
version = "0.3.0"
description = "ChatNut — shared chatrooms for AI agent teams"
authors = [
    { name = "Runno AI", email = "hi@runno.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "anyio>=4.0",
    "httpx>=0.28.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Framework :: FastAPI",
]

[project.scripts]
chatnut = "chatnut.cli:main"

[project.urls]
Repository = "https://github.com/runno-ai/chatnut"
Homepage = "https://github.com/runno-ai/chatnut"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
